--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-player": "^2.10.0",
     "react-scripts": "5.0.0",
     "stream-chat": "^6.3.0",
     "stream-chat-react": "^8.0.0",
